0025501: TNaming::Displace calls itself recursively with default parameter.

Patch to fix misprint in method Displace ().